# simulador-de-colas

./: .gitignore  .~Simulador de colas.xlsx
doc/: Analisis_de_porque_el_algoritmo_de_llegada_especificado_no_es_adecuado.xopp  README.md  Simulador de colas.xlsx  analisis_1.xlsx
src/: CMakeLists.txt  build.sh  main  main.c
src/Clientes/: CMakeLists.txt  Clientes.h  bruh.c  bruh.h  cajero.c  cajero.h  cliente.c  cliente.h  types.h
src/ListaLigada/: CMakeLists.txt  ListaLigada.h  lista.c  lista.h  nodo.c  nodo.h  types.h
src/Simulacion/: CMakeLists.txt  Simulacion.h  misc.c  misc.h  sim.c  sim.h  types.h
